# shermos_bot

./: .env.example  .gitignore  AGENTS.md  DEPLOY.md  Dockerfile  GEMINI.md  WHATSAPP_MIGRATION.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  run_api.py  run_webhook.py  run_worker.py
.gemini/: settings.json
config/: app_config.json
docs/: GEMINI_SPEC_gallery.md
migrations/: 001_processed_updates.sql  002_inbound_events.sql  003_outbound_events.sql  004_conversation_state.sql  005_chat_messages.sql  006_orders.sql  007_clients.sql  008_measurements.sql  009_prices_materials.sql  010_measurements_v2.sql  011_outbox_idempotency.sql  012_correct_pricing.sql  013_reconcile_pricing_catalog.sql  014_json_integrity_and_relations.sql  015_order_drafts.sql  016_measurement_scheduling_rules.sql  017_gallery.sql  018_gallery_shape.sql
mini-app/: index.html  package-lock.json  package.json
scripts/: wa_bridge.sh
src/: config.py  models.py
tests/: conftest.py  helpers.py  test_actions_applier.py  test_api_auth.py  test_api_orders.py  test_api_routes_more.py  test_config_and_tools.py  test_e2e_smoke.py  test_fsm.py  test_gallery_api.py  test_gallery_db.py  test_keyboards.py  test_llm_actions.py  test_measurement_service.py  test_migrations_integrity.py  test_outbox_dispatcher.py  test_postgres_helpers.py  test_pricing.py  test_pricing_cache.py  test_prompt_builder.py  test_redis_client.py  test_reliability.py  test_render.py  test_render_engine_more.py  test_render_geometry.py  test_render_requirements.py  test_telegram_sender.py  (+7 more)
(+89 files in other folders)
